--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
       <div class="yt__footer">
         <!--House Icon-->
-              <i class="fa-solid fa-house fa-xl"></i>
+              <i class="fa-solid fa-house fa-lg"></i>
 
         <!--Shorts Icon-->
               <svg
@@ -331,8 +331,8 @@
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
               y="0px"
-              width="30"
-              height="30"
+              width="25"
+              height="25"
               viewBox="0 0 24 24"
               >
               <path
@@ -344,8 +344,8 @@
               <svg
               id="img__icon"
               xmlns="http://www.w3.org/2000/svg"
-              width="30"
-              height="30"
+              width="25"
+              height="25"
               viewBox="0 0 24 24"
               id="video-library"
               >
