--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
           <a href="#" id="bar__btn2">Tech</a>
           <a href="#" id="bar__btn2">Podcasts</a>
           <a href="#" id="bar__btn2">Gaming</a>
+          <a href="#" id="bar__btn2a">CSS</a>
+          <a href="#" id="bar__btn2a">Live</a>
+
+          <a href="#" id="bar__btn2b">C++</a>
+          <a href="#" id="bar__btn2b">Computers</a>
+
+          <a href="#" id="bar__btn2c">Adobe</a>
+          <a href="#" id="bar__btn2c">WordPress</a>
         </div>
       </div>
     </header>
