--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
           <a href="#" id="bar__btn2c">Adobe</a>
           <a href="#" id="bar__btn2c">WordPress</a>
+
+          <a href="#" id="bar__btn2d">Adobe</a>
+          <a href="#" id="bar__btn2d">WordPress</a>
         </div>
       </div>
     </header>
@@ -122,7 +125,7 @@
         <div class="iframe">
           <iframe
             style="border-radius: 10px"
-            width="140"
+            width="140px"
             height="280"
             src="https://www.youtube.com/embed/Y3fc4oCy6cI"
             title="Web Development Mistakes To Avoid #coder #coding #webdevelopment"
@@ -152,6 +155,12 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
+
+          <iframe style="border-radius: 10px" width="140" height="280" src="https://www.youtube.com/embed/ESfDVsjJKtM" title="3 Free Tailwind CSS Awesome Resources" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+          <iframe style="border-radius: 10px" width="140" height="280" src="https://www.youtube.com/embed/mPj3W4nPh-4" title="Software Engineer gets an Urgent Request (funny) #shorts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
         </div>
       </div>
       <!--------2nd YT Video-------->
